tests/NormalTests/paczka1/fuzzy1/75531518.err
Error in line 7: mEjH8rQHar4 S784 1,1
Error in line 11: mEjH8rQHar4 A552 34,1
Error in line 22: mEjH8rQHar4 S611 61,7
Error in line 25: pTvw S784 55,9
Error in line 36: QzMj A725 32,1
